// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snpachot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-tittle"
    >
      Adrian
       
    </h1>
    <h3>
      Piedra
    </h3>
    <p>
      Elden Ring, Smash, Metal Gear
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 10px; padding: 10px;"
    >
      {"zipCode":"ABC-123","country":"Canada"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snpachot2 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-tittle"
  >
    Adrian
     
  </h1>
  <h3>
    Piedra
  </h3>
  <p>
    Elden Ring, Smash, Metal Gear
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 10px; padding: 10px;"
  >
    {"zipCode":"ABC-123","country":"Canada"}
  </p>
</div>
`;
